# agamotto

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  heuristic.vim  install_klee.sh
artifact/: README.md
artifact/results/: count_new_bugs.py  count_reproduced_bugs.py  get_offline_overhead.py  graph_performance.py  parse_bugs_and_perf.py  requirements.txt
artifact/targets/: common.sh  run_btree_eval.sh  run_hashmap_atomic_eval.sh  run_memcached_debug.sh  run_memcached_eval.sh  run_nvm_direct_eval.sh  run_pmdk_eval.sh  run_prior_art_repro.sh  run_rbtree_eval.sh  run_recipe_eval.sh  run_redis_eval.sh
artifact/vm_scripts/: .gitignore  install-vm.sh  run-vm.sh
bugreports/: .gitignore  graph.py  parse.py
bugreports/000_Buggy/: all.pmem.err  correct_count
bugreports/memcached-pmem/: parse.py
bugreports/nvm-direct/: all_pmem_errs.csv
bugreports/parsed/: memcached_bfs.csv  memcached_covnew.csv  memcached_dfs.csv  memcached_static.csv  nvm-direct_bfs.csv  nvm-direct_covnew.csv  nvm-direct_default.csv  nvm-direct_dfs.csv  nvm-direct_static.csv  pmdk_bfs.csv  pmdk_covnew.csv  pmdk_default.csv  pmdk_dfs.csv  pmdk_static.csv  recipe_bfs.csv  recipe_covnew.csv  recipe_default.csv  recipe_dfs.csv  recipe_static.csv
case_study/: gather_recipe.py  recipe.csv  recipe_big.csv  recipe_small.csv
case_study/pmdk/: Makefile  btree_map.h  driver.c
cmake/: klee_add_test_executable.cmake  klee_add_test_object.cmake
examples/divide/: divide.cpp
examples/get_sign/: get_sign.c
examples/mmap/: Makefile  mmap_test  mmap_test.c
examples/nvm_branches/: 002_branch_nvm_multiple.c  003_nvm_loop_no_persist.c  004_nvm_loop_persist.c  branch_nvm_mod.c  nvm_loops.c
examples/regexp/: Regexp_correct.c
experiment_out/: .gitignore  clht-nothread-transaction.bc  memcached.env  run_btree_eval.sh  run_hashmap_atomic_eval.sh  run_memcached_eval.sh  run_nvm_direct_eval.sh  run_rbtree_eval.sh  run_recipe_eval.sh  run_recipe_tx_eval.sh  run_redis_eval.sh
experiment_out/klee-memcached-bfs/: all.pmem.err  all_pmem_errs.csv  test000002.pmem.err  test000004.pmem.err  test000010.pmem.err  test000018.pmem.err  test000972.pmem.err  test000974.pmem.err  test000999.pmem.err  test001037.pmem.err  test001039.pmem.err  test001093.pmem.err  test001305.pmem.err  test001322.pmem.err  test007958.pmem.err  test011915.pmem.err  test012622.pmem.err
experiment_out/klee-memcached-covnew/: all.pmem.err  all_pmem_errs.csv  test000074.pmem.err  test000075.pmem.err  test000095.pmem.err  test000096.pmem.err  test000100.pmem.err  test000544.pmem.err  test002294.pmem.err  test002308.pmem.err  test002937.pmem.err  test004203.pmem.err  test016773.pmem.err  test029410.pmem.err  test040513.pmem.err  test042622.pmem.err
experiment_out/klee-memcached-default/: test000132.pmem.err  test000133.pmem.err  test000137.pmem.err  test000139.pmem.err  test000140.pmem.err  test000145.pmem.err  test000150.pmem.err  test000156.pmem.err  test000158.pmem.err  test000164.pmem.err  test000174.pmem.err
experiment_out/klee-memcached-dfs/: all.pmem.err  all_pmem_errs.csv
experiment_out/klee-memcached-static/: all.pmem.err  all_pmem_errs.csv  test000001.pmem.err  test000002.pmem.err  test000003.pmem.err  test000004.pmem.err  test000005.pmem.err  test000006.pmem.err  test000007.pmem.err  test000008.pmem.err  test000009.pmem.err  test000010.pmem.err  test000011.pmem.err  test000012.pmem.err
experiment_out/klee-nvm-direct-bfs/: all.pmem.err  all_pmem_errs.csv  (+209 more)
graphing/: graph.py
lib/Core/: AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  CoreStats.cpp  CoreStats.h  CustomCheckerHandler.cpp  CustomCheckerHandler.h  ExecutionState.cpp  Executor.cpp  Executor.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  NvmAnalysisUtils.cpp  NvmAnalysisUtils.h  NvmFunctionInfo.cpp  NvmHeuristicInfo.cpp  NvmHeuristicInfo.h  NvmHeuristics.cpp  NvmHeuristics.h  PersistentMemoryState.cpp  PersistentMemoryState.h  RootCause.cpp  RootCause.h  Searcher.cpp  Searcher.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  StatsTracker.h  Threading.cpp  UserSearcher.cpp  UserSearcher.h
nvmbugs/: CMakeLists.txt  intrinsics.h
nvmbugs/000_pmdk_btree_map/: CMakeLists.txt  btree_map.h  btree_map_buggy.c  btree_map_clean.c  btree_map_performance_fixed.c  constructor_test.c  driver.c  env_test.c  mmap_heuristic_test.c  once.c  printf_test.c  test.c  tiny_driver.c
nvmbugs/001_simple/: CMakeLists.txt  branch_nvm_mod.c  branch_paths.c  clean_flush_err.c  double_flush_err.c  double_flush_no_err.c  double_pmem_persist.c  flush_and_fence.c  flush_no_fence.c  inline_asm.c  may_flush_err.c  no_flush_no_err.c  nontemporal_err.c  nontemporal_noerr.c  simple_loop.c  simple_nvm_mod.c  sym_mmap.c
nvmbugs/002_pmdk_rbtree_map/: CMakeLists.txt  driver.c  rbtree_map.c  rbtree_map.h  rbtree_map_buggy.c  rbtree_map_clean.c  simple_driver.c
nvmbugs/002_simple_symbolic/: CMakeLists.txt  simple_symbolic.c  symbolic_offset_test.c  symbolic_pmem.c  symbolic_two_object.c
nvmbugs/003_heuristic_functional/: CMakeLists.txt  function_pointer_test.c
nvmbugs/003_pmdk_rbtree_map/: CMakeLists.txt  driver.c  rbtree_map_buggy.c  rbtree_map_clean.c  simple_driver.c
nvmbugs/004_heuristic_correctness/: CMakeLists.txt  common.h  nvm_or_vol.c  read_or_write.c  recursion.c  rw_loop.c  vararg_test.c
nvmbugs/005_nvm_direct/: CMakeLists.txt  allocs.c  original_no_nvm_ext.c  reproduce_simple.c  simple_no_nvm_ext.c  simpler_driver.c  small.c  test_nvmd_main.c  tiny.c  types.h
nvmbugs/005_nvm_direct/lib/: nvm_heap.c  nvm_misc.c  nvm_region.c  nvm_transaction.c  nvm_usid.h  nvms_misc.c  nvms_region.c  out.c  pmem.c
nvmbugs/005_nvm_direct/no_fc_lib/: nvm_misc.c  nvm_region.c  nvm_transaction.c  nvms_locking.c  nvms_sleeping.c
nvmbugs/005_nvm_direct/original_lib/: nvm_heap.c
nvmbugs/008_pmdk_pm_invaders/: CMakeLists.txt  pminvaders_nogui.c
nvmbugs/hashmap_atomic/: CMakeLists.txt  driver.c  map_hashmap_atomic.c
runtime/: Makefile.cmake.bitcode.config.in  Makefile.cmake.bitcode.rules
tools/: CMakeLists.txt
unittests/: CMakeLists.txt
(+2901 files in other folders)
